--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "joi": "^17.13.3",
     "mongoose": "^8.15.1",
+    "morgan": "^1.10.0",
     "multer": "^2.0.0"
   },
   "devDependencies": {
