--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "morgan": "^1.10.0",
     "multer": "^2.0.0"
