--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "multer": "^2.0.0",
     "nodemailer": "^7.0.3",
     "razorpay": "^2.9.6",
+    "stripe": "^18.2.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
